--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             else if(canvas.mozRequestFullScreen)
                 canvas.mozRequestFullScreen();
             else{
-              
+              alert("not supported full screen.")
             }
       }
       function FullScreenHook(){
