フルスクリーン処理変更

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 canvas.mozRequestFullScreen();
             else{
               fullScreenElement()
-              alert("not supported full screen.")
+              // alert("not supported full screen.")
             }
       }
       function fullScreenElement(){
