フルスクリーン更新

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       function fullScreenElement(){
         var footer = document.getElementById('footer');
         var header = document.getElementById('header');
-        footer.visibility = false
-        header.visibility = false
+        footer.style.display = 'none';
+        header.style.display = 'none';
       }
       function FullScreenHook(){
         var canvas = document.getElementById("canvas");
