--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="theme/love.css">
   </head>
   <body>
-    <div style="height: 100%; display: flex; flex-direction: column;">
+    <div class="fill_screen" style="height: 100%; display: flex; flex-direction: column;">
       <header  id = "header">
         <h1 class="center">
           rpg
@@ -152,6 +152,13 @@
           canvas.style.width = ( main.clientHeight * base_rate)  + "px"
         }
       }
+      /*
+      高さを保つ
+      */
+      const setFillHeight = () => {
+        let vh = window.innerHeight * 0.01;
+        document.documentElement.style.setProperty("--vh", `${vh}px`);
+      };
 
       window.onload = function () { window.focus(); };
       window.onclick = function () { window.focus(); };
@@ -166,12 +173,19 @@
       // 向きが変わる度に呼び出される
       window.addEventListener("orientationchange", ()=>{
         updateCanvasSize();
+        setFillHeight();
       });
 
       // ウィンドウサイズが変わったときに呼ばれる
       window.addEventListener("resize", ()=>{
         updateCanvasSize();
+        setFillHeight();
       });
+      // 画面操作があったときに呼ばれる
+      document
+        .querySelector(".fill_screen")
+        .addEventListener("touchmove", setFillHeight);
+      setFillHeight();
 
       var Module = {
         arguments: ["./game.love"],
@@ -194,6 +208,7 @@
             document.getElementById('loadingCanvas').style.display = 'none';
             document.getElementById('canvas').style.visibility = 'visible';
             updateCanvasSize();
+            setFillHeight();
           }
         },
         totalDependencies: 0,
