--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" type="text/css" href="theme/love.css">
   </head>
   <body>
-    <div class="fill_screen" style="height: 100%; display: flex; flex-direction: column;">
+    <div class="fill_screen" id="body_root_div" style="height: 100%; display: flex; flex-direction: column;">
       <header  id = "header">
         <h1 class="center">
           rpg
         </h1>
       </header>
   
-      <main id="main" style="background-color: rgb(69, 69, 97); color: white;">
+      <main id="main" style="background-color: rgb(18, 17, 20); color: white;">
         <canvas class="center" id="loadingCanvas" oncontextmenu="event.preventDefault()"></canvas>
         <div id="root_div" class="center" style="width: 100%; height: 100%; display:table;">
           <div class="center" style="display:table-cell; vertical-align:middle;">
@@ -65,7 +65,6 @@
       var canvasContext = document.getElementById('canvas').getContext('webgl');
       function drawLoadingText(text) {
         var canvas = loadingContext.canvas;
-        var root_div = document.getElementById("root_div");
 
         var w = document.getElementById('main').clientWidth;
         var h = document.getElementById('main').clientHeight;
@@ -137,6 +136,12 @@
         else{
 
         }
+
+        var root_div = document.getElementById("body_root_div");
+        let innerWidth = window.innerWidth;
+        let innerHeight = window.innerHeight;
+        root_div.style.width = innerWidth + "px"
+        root_div.style.height = innerHeight + "px"
 
         var canvas = document.getElementById("canvas");
         var main = document.getElementById("main");
