--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=0.1, maximum-scale=1, user-scalable=0">
+    <!-- ツールバー非表示 iOS用 -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- ツールバー非表示 Android用 -->
+    <meta name="mobile-web-app-capable" content="yes">
     <title>rpg</title>
 
     <!-- Load custom style sheet -->
