--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
         // webGL canvasの大きさを設定
         canvas.style.height = height + "px"
         canvas.style.width = width  + "px"
+        canvas.height = height
+        canvas.width = width
 
         console.log( "window size = (" + w + "," + h + ")" + " canvas size = (" + width + "," + height + ")" + "canvas style = (" + canvas.style.width + "," + canvas.style.height + ")" + " aspect:" + (width/height))
       }
