--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         {
           canvasWidth = parseInt( parseInt(main.clientWidth - 10) / 10 ) * 10
           canvasHeight = parseInt( parseInt(main.clientHeight - 10) / 10 ) * 10
-          width = canvasWidth * realToCSSPixels
-          height = canvasHeight * realToCSSPixels
+          width = canvasWidth
+          height = canvasHeight
         }
         // アスペクト比固定
         else
