--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
         }
         // ブラウザがcanvasでCSSピクセルを表示しているサイズを参照し、
         // デバイスピクセルに合った描画バッファサイズを計算する。
-        var displayWidth  = Math.floor(width  * realToCSSPixels);
-        var displayHeight = Math.floor(height * realToCSSPixels);
-        width = displayWidth
-        height = displayHeight
+        canvasWidth = Math.floor(canvasWidth  * realToCSSPixels);
+        canvasHeight = Math.floor(canvasHeight  * realToCSSPixels);
+        width = Math.floor(width  * realToCSSPixels);
+        height = Math.floor(height  * realToCSSPixels);
 
         // webGL canvasの大きさを設定
         canvas.width = canvasWidth
